pi2: tabs indentation, added styles for selected filter

--- a/res/template_filter.html
+++ b/res/template_filter.html
@@ -32,9 +32,9 @@
     </select>
 
     <label for="keywords">Show keywords</label>
-    <input type="checkbox" name="tx_sevenpack_pi1[show_keywords]" />
+    <input type="checkbox" name="tx_sevenpack_pi1[show_keywords]" ###CHECKED_SHOW_KEYWORDS### />
     <label for="keywords">Show abstracts</label>
-    <input type="checkbox" name="tx_sevenpack_pi1[show_abstracts]" />
+    <input type="checkbox" name="tx_sevenpack_pi1[show_abstracts]" ###CHECKED_SHOW_ABSTRACTS### />
     <input type="submit" name="tx_sevenpack_pi1[submit]" value="Go" />
   </form>
 </div>
