pi3: added use of language files

--- a/res/template_search.html
+++ b/res/template_search.html
@@ -3,7 +3,7 @@
 -->
 
 <form class="tx_sevenpack-searchform" action="###ACTION###" method="post">
-  <label for="tx_sevenpack-searchstring">Keyword</label>
+  <label for="tx_sevenpack-searchstring">###LABEL###:</label>
   <input type="text" name="tx_sevenpack_pi1[searchstring]" id="tx_sevenpack-searchstring" maxlength="255" />
   <input type="submit" name="tx_sevenpack_pi1[submit]" class="tx_sevenpack-submit" value="search" />
 </form>
