pi2: updated flexform and html templates

--- a/res/template_search.html
+++ b/res/template_search.html
@@ -3,9 +3,11 @@
 -->
 
 <form class="tx_sevenpack-searchform" action="###ACTION###" method="post">
-  <label for="tx_sevenpack-searchstring">###LABEL###:</label>
-  <input type="text" name="tx_sevenpack_pi1[searchstring]" id="tx_sevenpack-searchstring" maxlength="255" />
-  <input type="submit" name="tx_sevenpack_pi1[submit]" class="tx_sevenpack-submit" value="search" />
+	<fieldset>
+		<label for="tx_sevenpack-searchstring">###LABEL###:</label>
+		<input type="text" name="tx_sevenpack_pi1[searchstring]" id="tx_sevenpack-searchstring" maxlength="255" />
+		<input type="submit" name="tx_sevenpack_pi1[submit]" class="tx_sevenpack-submit" value="search" />
+	</fieldset>
 </form>
 
 <!-- ###TEMPLATE_SEARCH### end -->
