--- a/res/template_filter.html
+++ b/res/template_filter.html
@@ -2,42 +2,38 @@
 	This is the template for the sevenpack filters
 -->
 
-<div class="browse_years">
-  ###BROWSE_BY_YEAR###: ###LIST_YEARS###
-  <form class="form years" action="###ACTION###" method="post">
-    <select name="tx_sevenpack_pi1[year]">
-      ###OPTIONS_YEARS###
-    </select>
-    <input type="submit" name="tx_sevenpack_pi1[submit]" value="###BUTTON_GO###" />
-  </form>
-</div>
+<form class="form years" action="###ACTION###" method="post">
+	<fieldset class="browse_years">
+		###BROWSE_BY_YEAR###: ###LIST_YEARS###
+		<select name="tx_sevenpack_pi1[year]">
+			###OPTIONS_YEARS###
+		</select>
+		<input type="submit" name="tx_sevenpack_pi1[submit]" value="###BUTTON_GO###" />
+	</fieldset>
 
-<div class="browse_authors">
-  ###BROWSE_BY_AUTHOR###:
-  ###LIST_INITIALS###
-  ###LIST_AUTHORS###
-  <form class="form_authors" action="###ACTION###" method="post">
-    <select name="tx_sevenpack_pi1[author]">
-      ###OPTIONS_AUTHOR###
-    </select>
-    <input type="submit" name="tx_sevenpack_pi1[submit]" value="###BUTTON_GO###" />
-  </form>
-</div>
+	<fieldset class="browse_authors">
+		###BROWSE_BY_AUTHOR###:
+		###LIST_INITIALS###
+		###LIST_AUTHORS###
+		<select name="tx_sevenpack_pi1[author]">
+			###OPTIONS_AUTHOR###
+		</select>
+		<input type="submit" name="tx_sevenpack_pi1[submit]" value="###BUTTON_GO###" />
+	</fieldset>
 
-<div class="preferences">
-  <form class="preferences" action="###ACTION###" method="post">
+	<fieldset class="preferences">
 		<label for="references_per_page">###REFERENCES_PER_PAGE###:</label>
-    <select name="tx_sevenpack_pi1[limit]" id="references_per_page">
-      ###OPTIONS_LIMITS###
-    </select>
+		<select name="tx_sevenpack_pi1[limit]" id="references_per_page">
+			###OPTIONS_LIMITS###
+		</select>
 
-    <label for="show_keywords">###LABEL_SHOW_KEYWORDS###</label>
-    <input type="checkbox" name="tx_sevenpack_pi1[show_keywords]" id="show_keywords" ###CHECKED_SHOW_KEYWORDS### />
-    <label for="show_abstracts">###LABEL_SHOW_ABSTRACTS###</label>
-    <input type="checkbox" name="tx_sevenpack_pi1[show_abstracts]" id="show_abstracts" ###CHECKED_SHOW_ABSTRACTS### />
-    <input type="submit" name="tx_sevenpack_pi1[submit]" value="###BUTTON_GO###" />
-  </form>
-</div>
+		<label for="show_keywords">###LABEL_SHOW_KEYWORDS###</label>
+		<input type="checkbox" name="tx_sevenpack_pi1[show_keywords]" id="show_keywords" ###CHECKED_SHOW_KEYWORDS### />
+		<label for="show_abstracts">###LABEL_SHOW_ABSTRACTS###</label>
+		<input type="checkbox" name="tx_sevenpack_pi1[show_abstracts]" id="show_abstracts" ###CHECKED_SHOW_ABSTRACTS### />
+		<input type="submit" name="tx_sevenpack_pi1[submit]" value="###BUTTON_GO###" />
+	</fieldset>
+</form>
 
 <!-- ###TEMPLATE_FILTER### end -->
 
