--- a/Documentation/Legacy/syntax.xhtml
+++ b/Documentation/Legacy/syntax.xhtml
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en_us" lang="en_us">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Syntax - Typo3 extension Bib</title>
+	<title>Syntax - TYPO3 extension Bib</title>
 	<style type="text/css">
 		body {
 			font-family: Arial, Helvetica, sans-serif
@@ -24,7 +24,7 @@
 <body>
 <div class="main">
 
-<h1>Typo3 extension Bib - Publication syntax</h1>
+<h1>TYPO3 extension Bib - Publication syntax</h1>
 
 
 <h2>Special characters</h2>
